corrected spellings of field
