# docs/swagger.json
@@ -896,12 +896,12 @@
         "handlers.FormFieldRequest": {
             "type": "object",
             "required": [
-                "fields_id",
+                "field_id",
                 "form_id",
                 "validations"
             ],
             "properties": {
-                "fields_id": {
+                "field_id": {
                     "type": "integer"
                 },
                 "form_id": {
